# opengl-playground

./: .gitignore  .gitmodules  CMakeLists.txt
resources/models/karambit/: README.md
resources/shader/: basic.vert  basic_cube.frag  basic_texture.frag  basic_texture.vert  blending.frag  demo_blinn_phong_lighting.frag  demo_coordinate_system.frag  demo_phong_lighting.frag  demo_phong_lighting.vert  demo_phong_lighting_light.frag  demo_phong_lighting_light.vert  demo_texture.frag  demo_transformation.frag  depth_testing.frag  framebuffer_simple.frag  light_phong.frag  light_phong.vert  model_loading.frag  model_loading.vert  model_loading_with_lighting.frag  skybox.vert  skybox_env_mapping.frag  skybox_env_mapping.vert  skybox_reflection.frag  skybox_reflection.vert  stencil_testing.frag
resources/shader/advanced_data_glsl/: basic.vert  cube.vert  cube_front_back_face_textured.frag  cube_front_back_face_textured.vert  cube_quadrants.frag
resources/shader/instancing/: instancing_via_attrib_offset.vert  model_loading.frag  model_loading.vert
resources/shader/skeletal_animation/: skeletal_animation.vert
src/: Animation.hpp  Bone.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ScopedTimer.cpp  Shader.cpp  Shader.hpp  TestingData.cpp  TestingData.hpp  Utils.cpp  Utils.hpp  main.cpp
src/demo-apps/: CMakeLists.txt
src/demo-apps/blinn-phong-lighting/: CMakeLists.txt  main.cpp
src/demo-apps/camera/: CMakeLists.txt  main.cpp
src/demo-apps/coordinate-system/: CMakeLists.txt  main.cpp
src/demo-apps/dear-imgui-integration/: CMakeLists.txt  main.cpp
src/demo-apps/depth-testing/: CMakeLists.txt  main.cpp
src/demo-apps/hello-triangle/: CMakeLists.txt  main.cpp
src/demo-apps/model-loading/: CMakeLists.txt  main.cpp
src/demo-apps/phong-lighting/: CMakeLists.txt  main.cpp
src/demo-apps/raytracing-in-one-weekend/: CMakeLists.txt  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
src/demo-apps/text-rendering/: CMakeLists.txt  main.cpp
src/demo-apps/textures/: CMakeLists.txt  main.cpp
src/demo-apps/transformations/: CMakeLists.txt  main.cpp
src/graphics/: Animation.cpp  Animator.cpp  Bone.cpp  CMakeLists.txt  Camera.cpp  ImGuiWrapper.cpp  IndexBuffer.cpp  Mesh.cpp  Model.cpp  Mouse.cpp  Text2D.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  WindowManager.cpp
src/graphics/include/graphics/: Animator.hpp  Camera.hpp  ImGuiWrapper.hpp  IndexBuffer.hpp  Mesh.hpp  Model.hpp  Mouse.hpp  Text2D.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  WindowManager.hpp
src/utils/: CMakeLists.txt  ScopedTimer.cpp  Utils.cpp
src/utils/include/utils/: ScopedTimer.hpp  Utils.hpp
