add_subdirectory(hello-triangle)
add_subdirectory(textures)
add_subdirectory(transformations)
add_subdirectory(coordinate-system)
add_subdirectory(camera)
add_subdirectory(phong-lighting)
add_subdirectory(model-loading)
add_subdirectory(depth-testing)
add_subdirectory(blinn-phong-lighting)

add_subdirectory(raytracing-in-one-weekend)

add_subdirectory(dear-imgui-integration)
